[package]
name = "predate"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas D. Crosbie"]
license = "MIT"
description = "Catch bugs through automated system testing of a cli application"

[dependencies]
clap = "4.5.23"
json-predicate = "0.1.16"
predicates = "3.1.2"
serde_json = "1.0.133"
tempfile = "3.14.0"
