[package]
name = "predate"
version = "0.1.3"
edition = "2021"
authors = ["Nicholas D. Crosbie"]
license = "MIT"
description = "Catch bugs and performance regressions through automated system testing"
homepage = "https://github.com/Rbfinch/predate"
documentation = "https://github.com/Rbfinch/predate"
repository = "https://github.com/Rbfinch/predate"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["CLI", "testing", "system-testing", "performance"]


[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
json-predicate = "0.1.16"
predicates = "3.1.3"
serde_json = "1.0.134"
serde_yaml = "0.9.34"
tempfile = "3.14.0"
